force-app/main/default/objects/ContentVersion/fields/Folder__c.field-meta.xml
<CustomField>
    <fullName>Folder__c</fullName>
    <label>Folder</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Parent_Object__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Loan Documents</fullName>
            </value>
            <value>
                <fullName>Assignments &amp; Allonges</fullName>
            </value>
            <value>
                <fullName>Borrower Underwriting</fullName>
            </value>
            <value>
                <fullName>Asset Underwriting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>