force-app/main/default/objects/ContentVersion/fields/Linked_To_Record__c.field-meta.xml
<CustomField>
    <fullName>Linked_To_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Linked To Record</label>
    <type>Checkbox</type>
</CustomField>