force-app/main/default/objects/ContentVersion/fields/Parent_Object__c.field-meta.xml
<CustomField>
    <fullName>Parent_Object__c</fullName>
    <label>Parent Object</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Trade__c</fullName>
            </value>
            <value>
                <fullName>Trade_Deal__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>