force-app/main/default/objects/ContentVersion/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Folder__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Loan Agreement</fullName>
            </value>
            <value>
                <fullName>Promissory Note</fullName>
            </value>
            <value>
                <fullName>Guaranty</fullName>
            </value>
            <value>
                <fullName>Holdback Agreement</fullName>
            </value>
            <value>
                <fullName>Security Instrument</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Allonge</fullName>
            </value>
            <value>
                <fullName>Omnibus Assignment</fullName>
            </value>
            <value>
                <fullName>Assignment of Security Instrument</fullName>
            </value>
            <value>
                <fullName>Credit &amp; Background</fullName>
            </value>
            <value>
                <fullName>Bank Statements</fullName>
            </value>
            <value>
                <fullName>ID</fullName>
            </value>
            <value>
                <fullName>Track Record</fullName>
            </value>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Appraisal</fullName>
            </value>
            <value>
                <fullName>Rehab Scope of Work</fullName>
            </value>
            <value>
                <fullName>Title Commitment</fullName>
            </value>
            <value>
                <fullName>Title Policy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>