force-app/main/default/objects/ContentVersion/fields/Uploaded_From_Portal_Id__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_From_Portal_Id__c</fullName>
    <label>Uploaded From Portal Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>